--- a/pom.xml
+++ b/pom.xml
@@ -33,5 +33,10 @@
     <artifactId>jsr305</artifactId>
     <version>3.0.1</version>
 </dependency>
+<dependency>
+  <groupId>org.apache.httpcomponents</groupId>
+  <artifactId>httpclient</artifactId>
+  <version>4.5.3</version>
+</dependency>
  </dependencies>
 </project>
