--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -7,10 +7,10 @@ commands:
   signpicturemanager:
     description: SignPictureManagerCommand.
     usage: /<command> <subcommand>
+    permission-message: You don't have <permission>
     aliases:
       - signpicmanager
       - sm
-    permission-message: "You don't have <permission>"
 permissions:
   signpic.*:
     description: Full permission of SignPictureManager.
