--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,3 +1,5 @@
+# Please check this page for details. 
+# https://github.com/Team-Fruit/SignPictureManager/wiki/Config
 limits:
   offset: 0
   size: 0
