--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>net.teamfruit</groupId>
 	<artifactId>SignPictureManager</artifactId>
-	<version>1.0.0</version>
+	<version>1.0.0.beta</version>
 	<build>
 		<plugins>
 			<plugin>
