--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: SignPictureManager
 main: net.teamfruit.signpic.manager.SignPictureManager
-version: 1.0.0
+version: 1.0.0.beta
 author: TeamFruit
 database: true
 commands:
